@@ -1,3 +1,8 @@
+2001-05-11  Tomas O Connor  <tomas.oconnor@ireland.sun.com>
+
+	* gconf/gconf-internals.h, gconf/gconf-value.h: move
+	gconf_value_new_from_string to make it a public API
+
 2001-05-11  Havoc Pennington  <hp@redhat.com>
 
        Merge from stable.
